src/objects/Group__c.object
<CustomObject>
    <description>Groups from WHICS</description>
    <fields>
        <fullName>Account_Manager_Reports__c</fullName>
        <label>Account Manager Reports</label>
        <picklist>
            <picklistValues>
                <fullName>Membership List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLA Reports</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Account_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Support</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_frequency_information__c</fullName>
        <description>Additional text used by marketing on brochures</description>
        <label>Application Instructions Specific</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Book_layout__c</fullName>
        <description>Indicates the type of book layout required to display the products.</description>
        <inlineHelpText>Indicates the type of book layout required to display the products.</inlineHelpText>
        <label>Book layout</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mix and match</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Broker_Name_From_Opp__c</fullName>
        <formula>Opportunity__r.Broker__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_Reports__c</fullName>
        <label>Claims Reports</label>
        <picklist>
            <picklistValues>
                <fullName>Hosp &amp; Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosp &amp; Medical with Counts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosp &amp; Medical by Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosp &amp; Medical by Prod with MBS &amp; Excess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosp &amp; Medical YTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental &amp; Ancillary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental &amp; Ancillary with Counts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental &amp; Ancillary by Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 10 Dental &amp; Ancillary</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <formula>Opportunity__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Logo_File_Name__c</fullName>
        <description>File name of the logo supplied by client [location and size and format to be confirmed] to appear in the book</description>
        <inlineHelpText>File name of the logo supplied by client [location and size and format to be confirmed] to appear in the book</inlineHelpText>
        <label>Client Logo File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_logo_on_application_booklet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True when the clients logo is included on marketing booklets.</description>
        <label>Client logo required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clone_of_Id__c</fullName>
        <formula>Clone_of__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clone of Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clone_of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clone of</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Copies</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_on__c</fullName>
        <inlineHelpText>This is the date that the record was closed. If this date is populated and is less then todays date (or the same date) then the record will be closed.</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commercial_Analyst__c</fullName>
        <description>Derived from parent opportunity</description>
        <formula>IF(
NOT(ISBLANK(Opportunity__r.Commercial_Analyst__c)),
Opportunity__r.Commercial_Analyst__r.LastName &amp; &apos;, &apos; &amp; Opportunity__r.Commercial_Analyst__r.FirstName,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial Analyst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Financial_Summary__c</fullName>
        <label>Commercial Financial Summary</label>
        <picklist>
            <picklistValues>
                <fullName>Financial Analyais Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital &amp; Medical Claims Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental &amp; Ancillary Claims Report</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Commercial_Regular_Reports__c</fullName>
        <label>Commercial Regular Reports</label>
        <picklist>
            <picklistValues>
                <fullName>Payroll Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Movement Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Bridge Report</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Company_Rights__c</fullName>
        <description>Set to True when the company has rights to obtain member data.</description>
        <label>Company Rights</label>
        <picklist>
            <picklistValues>
                <fullName>No Excess</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DRG_Reports__c</fullName>
        <label>DRG Reports</label>
        <picklist>
            <picklistValues>
                <fullName>DRG Standard (all)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRG for Employee (Client)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRG for Customer (Dependants)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expanded DRG Standard (all)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expanded DRG for Employee (Client)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expanded DRG for Customer (Dependants)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Calculate_Renewal_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prevent the system from calculating the renewal date automatically (this can be used in special circumstances where the renewal date needs to be manually set to a date that does not meet standard procedural requirements e.g. can not wait 12 months)</inlineHelpText>
        <label>Do Not Calculate Renewal Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date_for_Application__c</fullName>
        <description>Date that appears in the book to indicate when the plan is effective from. E.g. &apos;The enclosed information is effective from &lt;date&gt;&apos;</description>
        <inlineHelpText>Date that appears in the book to indicate when the plan is effective from. E.g. &apos;The enclosed information is effective from &lt;date&gt;&apos;</inlineHelpText>
        <label>Health Plan Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_end_date__c</fullName>
        <description>The date that the process started (may differ to created date if the record was created but not actioned at the same time)</description>
        <inlineHelpText>Manually enter the process start date</inlineHelpText>
        <label>Group Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_brochure_wording3__c</fullName>
        <description>Additional plan information from the Client to appear in the book. No special characters or returns in text.</description>
        <inlineHelpText>Additional plan information from the Client to appear in the book. No special characters or returns in text.</inlineHelpText>
        <label>Client Supplied Plan Wording</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extra_brochure_wording6__c</fullName>
        <description>Fields required for client application / brochure. To be finalised by marketing.</description>
        <label>Extra application wording 1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extra_brochure_wording7__c</fullName>
        <label>Extra application wording 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extra_broker_page_in_booklet__c</fullName>
        <description>Select if a AON or HICA Broker panel is included in the book</description>
        <inlineHelpText>Select if a AON or HICA Broker panel is included in the book</inlineHelpText>
        <label>Broker Wording Panel</label>
        <picklist>
            <picklistValues>
                <fullName>Aon Voluntary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aon Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HICA Voluntary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HICA Corporate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FreeCall_number__c</fullName>
        <description>Indicates the freecall number to appear in the book.</description>
        <inlineHelpText>Indicates the freecall number to appear in the book.</inlineHelpText>
        <label>FreeCall number</label>
        <picklist>
            <picklistValues>
                <fullName>1300 551 004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1300 787 230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1300 791 757</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1300 794 624</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1800 005 315</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1800 249 966</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1800 633 819</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1800 681 926</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1800 814 159</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GU_Health_Plan_Code__c</fullName>
        <description>Unique code to indicate which group the GU health plan applies to, e.g. &apos;BAE&apos; for GU Health Plan, group 83082. Appears on last page of the book.</description>
        <inlineHelpText>Unique code to indicate which group the GU health plan applies to, e.g. &apos;BAE&apos; for GU Health Plan, group 83082. Appears on last page of the book.</inlineHelpText>
        <label>GU Health Plan Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Directory__c</fullName>
        <label>Group Directory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name_Web__c</fullName>
        <description>This is the health plan name for title page, e.g. AON Corporate Health Plan</description>
        <inlineHelpText>This is the health plan name for title page, e.g. AON Corporate Health Plan</inlineHelpText>
        <label>Group Name Web</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <description>Group Number from WHICS</description>
        <inlineHelpText>This field needs to be 5 digits long and all numeric</inlineHelpText>
        <label>Group Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Whics_Name__c</fullName>
        <description>This is the long technical name, e.g. AON Corporation Australia Limited</description>
        <inlineHelpText>This is the long technical name, e.g. AON Corporation Australia Limited</inlineHelpText>
        <label>Group Whics Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_of_Operation__c</fullName>
        <description>Indicates the hours of operation applicable for this group to appear in book.</description>
        <inlineHelpText>Indicates the hours of operation applicable for this group to appear in book.</inlineHelpText>
        <label>Hours of Operation</label>
        <picklist>
            <picklistValues>
                <fullName>8am to 7pm (EST), Monday to Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.30am to 5pm (EST), Monday to Friday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_to_Join_Transfer__c</fullName>
        <description>Indicates how a member may join the Group. This determines what join information is included in the book.</description>
        <inlineHelpText>Indicates how a member may join the Group. This determines what join information is included in the book.</inlineHelpText>
        <label>How to Join/Transfer</label>
        <picklist>
            <picklistValues>
                <fullName>Join Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Join Standard - Web Code Download App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Join Standard - No Web Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual App Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsPublishWizard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A field (system) to distinguish whether the record has been edited using the publish wizard. Tells the system to change the record type to active.</description>
        <label>Is Publish Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>IF( 
Start_Date__c &gt; TODAY(), &apos;Pending&apos;, 
IF(
RecordType.Name == &apos;Draft&apos;, &apos;Draft&apos;,
IF(
AND(
Renewal_Date__c &lt;= TODAY(),
RecordType.Name == &apos;Replaced&apos;), &apos;Discarded&apos;,
IF(
AND(
Closed_on__c &lt;= TODAY(),
RecordType.Name == &apos;Replaced&apos;), &apos;Closed&apos;, &apos;Active&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Join_Online_available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Group has OMS</description>
        <label>OMS Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Book_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Book Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_brochures_not_for_distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to True when the member can not receive marketing brochures.</description>
        <label>Marketing brochures not for distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_comments__c</fullName>
        <description>AM to record if manual book is required for this group (ie not generated via TH in SF), and/or what Client Wording is on the company rights page (company specifc - currently 4 groups)</description>
        <inlineHelpText>AM to record if manual book is required for this group (ie not generated via TH in SF), and/or what Client Wording is on the company rights page (company specifc - currently 4 groups)</inlineHelpText>
        <label>Marketing comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Members__c</fullName>
        <label>Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Reports__c</fullName>
        <label>Membership Reports</label>
        <picklist>
            <picklistValues>
                <fullName>Service Limit Summary/Limit Util Extras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active policies by group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cigna Membership List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cigna Membership List with Dep</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>Opportunity__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity/Renewal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Start_Date__c</fullName>
        <description>The Date where the very first group was opened, regardless of version (for information purposes, is extracted from WHICS and should not be manually edited)</description>
        <inlineHelpText>The Date where the very first group was opened, regardless of version (from WHICS)</inlineHelpText>
        <label>Original Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payroll_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payroll Contact for Operations</description>
        <inlineHelpText>Payroll Contact for Operations</inlineHelpText>
        <label>Payroll Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Address__c</fullName>
        <label>Postal Address</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rate_Code__c</fullName>
        <label>Rate Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Renewal_Date__c</fullName>
        <description>Publish Date + 12 months (calculated by trigger)</description>
        <inlineHelpText>This is the date that the group is due for renewal.</inlineHelpText>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Reports__c</fullName>
        <label>Rebate Reports</label>
        <picklist>
            <picklistValues>
                <fullName>Cigna Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU Rebate</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <inlineHelpText>The date that this record was superseded by publishing a newer version (this is a system field and can not be edited).</inlineHelpText>
        <label>Discard Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Frequency__c</fullName>
        <inlineHelpText>This is the number of months before the next renewal.</inlineHelpText>
        <label>Renewal Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>12</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Groups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Process_Status__c</fullName>
        <formula>IF(
ISBLANK( Renewal_Processed_Time__c ),
&apos;Awaiting processing&apos;,
&apos;Renewal has been created&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A renewal can only be generated from a record once. If you require a renewal date to be generated a second time, please contact a system administrator</inlineHelpText>
        <label>Renewal Process Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Processed_Time__c</fullName>
        <description>When the renewal was created (either manually or automatically). Once this field is populated, the scheduler will not clone it automatically</description>
        <inlineHelpText>When the renewal was created (either manually or automatically). Once this field is populated, the scheduler will not clone it automatically</inlineHelpText>
        <label>Renewal Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Trigger_Date__c</fullName>
        <description>This is the date that the system will create a new renewal (if one has not been created manually already).</description>
        <inlineHelpText>This is the date that the system will create a new renewal (if one has not been created manually already).</inlineHelpText>
        <label>Renewal Trigger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_End_Date__c</fullName>
        <label>Report End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Frequency__c</fullName>
        <label>Report Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Six-monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nine-monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_Start_Date__c</fullName>
        <label>Report Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Required_by__c</fullName>
        <label>Required by</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Specific_Reporting_Template__c</fullName>
        <label>Requires Specific Reporting Template</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Return_Address_Line_1__c</fullName>
        <description>Return address to appear in books for applications</description>
        <inlineHelpText>Return address to appear in books for applications</inlineHelpText>
        <label>Return Address Line 1</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Address_Line_2__c</fullName>
        <description>Return address to appear in books for applications</description>
        <inlineHelpText>Return address to appear in books for applications</inlineHelpText>
        <label>Return Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Broker_Name__c</fullName>
        <description>Broker name to appear in book to receive applications (if applicable)</description>
        <inlineHelpText>Broker name to appear in book to receive applications (if applicable)</inlineHelpText>
        <label>Return Broker Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_City__c</fullName>
        <description>Return address to appear in books for applications</description>
        <inlineHelpText>Return address to appear in books for applications</inlineHelpText>
        <label>Return City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Client_Name__c</fullName>
        <description>Client name to appear in book to receive applications (if applicable)</description>
        <inlineHelpText>Client name to appear in book to receive applications (if applicable)</inlineHelpText>
        <label>Return Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Contact_Name__c</fullName>
        <description>Contact name to appear in book to receive applications (if applicable)</description>
        <inlineHelpText>Contact name to appear in book to receive applications (if applicable)</inlineHelpText>
        <label>Return Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Email__c</fullName>
        <description>Return email address to appear in book for applications</description>
        <inlineHelpText>Return email address to appear in book for applications</inlineHelpText>
        <label>Return Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Return_Fax__c</fullName>
        <description>Return address to appear in books for applications</description>
        <inlineHelpText>Return address to appear in books for applications</inlineHelpText>
        <label>Return Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Return_Phone__c</fullName>
        <description>Return phone number to appear in book for applications</description>
        <inlineHelpText>Return phone number to appear in book for applications</inlineHelpText>
        <label>Return Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Return_Postcode__c</fullName>
        <description>Return address to appear in books for applications</description>
        <inlineHelpText>Return address to appear in books for applications</inlineHelpText>
        <label>Return Postcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_State__c</fullName>
        <description>Return address to appear in books for applications</description>
        <inlineHelpText>Return address to appear in books for applications</inlineHelpText>
        <label>Return State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_application_instructions__c</fullName>
        <description>Alternative return address or contact information for applications (e.g. enter block text to appear in books; no special characters or returns between text)</description>
        <inlineHelpText>Alternative return address or contact information for applications (e.g. enter block text to appear in books; no special characters or returns between text)</inlineHelpText>
        <label>Alternative Return Address</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_date__c</fullName>
        <label>Review date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>Opportunity__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Features__c</fullName>
        <label>Special Features</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Rates__c</fullName>
        <description>confirms if product rates blended (if yes) or state by state (if no)</description>
        <inlineHelpText>confirms if product rates blended (if yes) or state by state (if no)</inlineHelpText>
        <label>Type of Rates</label>
        <picklist>
            <picklistValues>
                <fullName>Blended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State by state</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended and State by State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>The version of the copy (calculated via the Group Version Number object which is updated via the Group Number)</description>
        <label>Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waiting_Period_Waiver_Comments__c</fullName>
        <label>Waiting Period Waiver Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Waiting_Periods__c</fullName>
        <description>Waiting periods are full (12 months), half (6 months) or none (no waits).</description>
        <inlineHelpText>Waiting periods are full (12 months), half (6 months) or none (no waits).</inlineHelpText>
        <label>Waiting Periods</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Half</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warnings_Alerts__c</fullName>
        <label>Warnings &amp; Alerts</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Web_Reports__c</fullName>
        <label>Web Reports</label>
        <picklist>
            <picklistValues>
                <fullName>Web Uptime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Join Online Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Registration Info</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>